# inf-wasi

./: .gitignore  Cargo.toml  Makefile  README.md  config.json
bindings/javascript/: README.md  app.js  package-lock.json  package.json
bindings/python/: .gitignore  Makefile  README.md  inference.py
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs  main.rs
config/: Cargo.toml
config/src/: lib.rs
docs/: wasi-nn-adapter.md  wasi-nn-tensor-wrong-type-issue.md
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  wit.rs
engines/engine/src/: engine.rs
engines/llama-cpp-engine/: Cargo.toml
engines/llama-cpp-engine/src/: engine.rs
engines/openvino-engine/: Cargo.toml
engines/openvino-engine/src/: engine.rs  lib.rs
examples/: wasmedge-wasi-nn.rs
generator/: .gitignore  Cargo.toml
generator/api/: Cargo.toml
generator/api/src/: main.rs
generator/cli/: Cargo.toml
generator/cli/src/: main.rs
generator/src/: binaryen-main.rs  lib.rs  main.rs
inference/: Cargo.toml
inference/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
src/: lib.rs  wit.rs
wit/: config-types.wit  inf.wit  llm.wit
