[package]
name = "inf-wasi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
wit-bindgen = { version = "0.17.0", default-features = true, features = ['macros'] }
wasmedge-nn = "0.5.2"

[dev-dependencies]
wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn", branch = "ggml" }

[lib]
crate-type = ["cdylib"]
