[workspace]
resolver = "2"
members = [
    "engines/engine",
    "inference",
    "bindings/rust",
    "config",
    "generator",
]

[workspace.dependencies]
wit-bindgen = { version = "0.21.0", default-features = true, features = ['macros'] }

[profile.release]
opt-level = 3
debug-assertions = false
