[workspace]
resolver = "2"
members = [
    "engines/llama-cpp-engine",
    "engines/openvino-engine",
    "inference",
    "bindings/rust",
    "config",
    "generator",
]

[workspace.dependencies]
wit-bindgen = { version = "0.21.0", default-features = true, features = ['macros'] }

[profile.release]
opt-level = 3
debug-assertions = false
