[package]
name = "rust-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmtime = { git = "https://github.com/danbev/wasmtime.git", branch="llama.cpp-backend", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/danbev/wasmtime.git", branch="llama.cpp-backend"}
wasmtime-wasi-nn = { git = "https://github.com/danbev/wasmtime.git", branch="llama.cpp-backend", features = ["llama_cpp"] }
wasi-common = "18.0.2"
cap-std = "3.0.0"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.89", features = ["float_roundtrip", "arbitrary_precision", "preserve_order"] }
clap = "3.0"
